pure responsive layout + better way to list posts + better admin

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,33 +1,39 @@
-<h1>Listing posts</h1>
+<div class="posts">
 
-<table>
-  <thead>
+  <h1 class="content-subhead">All Posts</h1>
+
+  <table class="pure-table">
+    <thead>
     <tr>
+      <th>Id</th>
       <th>Title</th>
       <th>Content</th>
-      <th>Author name</th>
-      <th>Released date</th>
-      <th>Is released</th>
+      <th>Author</th>
+      <th>Release Date</th>
+      <th>Released?</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.author_name %></td>
-        <td><%= post.released_date %></td>
-        <td><%= post.is_released %></td>
-        <td><%= link_to 'Show', admin_post_path(post) %></td>
-        <td><%= link_to 'Edit', edit_admin_post_path(post) %></td>
-        <td><%= link_to 'Destroy',  admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <tr>
+          <td><%= post.id %></td>
+          <td><%= post.title %></td>
+          <td><%= post.content.truncate(80, omission: '...') %></td>
+          <td><%= post.author_name %></td>
+          <td><%= post.released_date %></td>
+          <td><%= post.is_released ? 'Y' : "N" %></td>
+          <td><%= link_to 'Show', admin_post_path(post) %></td>
+          <td><%= link_to 'Edit', edit_admin_post_path(post) %></td>
+          <td><%= link_to 'Destroy',  admin_post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Post', new_admin_post_path %>
+  <%= link_to 'New Post', new_admin_post_path %>
+
+</div>
