--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,26 @@
-<h1>Listing posts</h1>
+<div class="posts">
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Author name</th>
-      <th>Released date</th>
-      <th>Is released</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1 class="content-subhead">Recent Posts</h1>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.author_name %></td>
-        <td><%= post.released_date %></td>
-        <td><%= post.is_released %></td>
-        <td><%= link_to 'Show', post %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <% @posts.each do |post| %>
+
+      <section class="post">
+
+        <header class="post-header">
+          <h2 class="post-title"><%= link_to post.title, post %></h2>
+          <p class="post-meta">
+            <%= post.released_date.strftime('%d %b, %Y') %> by
+            <a class="post-author" href="#"><%= post.author_name %></a>
+          </p>
+        </header>
+
+        <div class="post-description">
+          <p><%= post.content %></p>
+        </div>
+
+      </section>
+
+  <% end %>
+
+</div>
+
