--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,28 +1,51 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<!--<p id="notice"><%= notice %></p>-->
 
-<p>
-  <strong>Content:</strong>
-  <%= @post.content %>
-</p>
+<!--<p>-->
+<!--<strong>Title:</strong>-->
+<!--<%= @post.title %>-->
+<!--</p>-->
 
-<p>
-  <strong>Author name:</strong>
-  <%= @post.author_name %>
-</p>
+<!--<p>-->
+<!--<strong>Content:</strong>-->
+<!--<%= @post.content %>-->
+<!--</p>-->
 
-<p>
-  <strong>Released date:</strong>
-  <%= @post.released_date %>
-</p>
+<!--<p>-->
+<!--<strong>Author name:</strong>-->
+<!--<%= @post.author_name %>-->
+<!--</p>-->
 
-<p>
-  <strong>Is released:</strong>
-  <%= @post.is_released %>
-</p>
+<!--<p>-->
+<!--<strong>Released date:</strong>-->
+<!--<%= @post.released_date %>-->
+<!--</p>-->
 
-<%= link_to 'Back', posts_path %>
+<!--<p>-->
+<!--<strong>Is released:</strong>-->
+<!--<%= @post.is_released %>-->
+<!--</p>-->
+
+<!--<%= link_to 'Back', posts_path %>-->
+
+<div class="posts">
+
+  <section class="post">
+
+    <header class="post-header">
+      <h2 class="post-title"><%= link_to @post.title, @post %></h2>
+      <p class="post-meta">
+        <%= @post.released_date.strftime('%d %b, %Y') %> by
+        <a class="post-author" href="#"><%= @post.author_name %></a>
+      </p>
+    </header>
+
+    <div class="post-description">
+      <p><%= @post.content %></p>
+    </div>
+
+  </section>
+
+</div>
+
+
