--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,37 +1,40 @@
-<%= form_for([:admin, @post]) do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+<%= form_for [:admin, @post], html: {class:"pure-form"} do |f| %>
+    <% if @post.errors.any? %>
+        <div id="error_explanation" class="pure-g">
+          <div class="pure-u-1 pure-u-md-1-1">
+            <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+          </div>
+          <% @post.errors.full_messages.each do |message| %>
+              <div class="pure-u-1 pure-u-md-1-1"><%= message %></div>
+          <% end %>
+        </div>
+    <% end %>
 
-      <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="pure-g">
+      <div class="pure-u-1 pure-u-md-1-1 l-box">
+        <%= f.text_field :title, label: false, class: 'pure-input-1', placeholder: 'Title' %>
+      </div>
+
+      <div class="pure-u-1 pure-u-md-1-2 l-box">
+        <%= f.text_field :author_name, label: false, class: 'pure-input-1', placeholder: 'Author' %>
+      </div>
+
+      <div class="pure-u-1 pure-u-md-1-2 l-box">
+        <%= f.datetime_select :released_date, label: false, class: 'pure-input-1', placeholder: 'Release Date' %>
+      </div>
+
+      <div class="pure-u-1 pure-u-md-1-1 l-box">
+        <label for="release?" class="pure-checkbox">
+          Release? <%= f.check_box :is_released, label: false %>
+        </label>
+      </div>
+
+      <div class="pure-u-1 pure-u-md-1-1 l-box">
+        <%= f.cktext_area :content, cols: 40, ckeditor: { height: 400 } %>
+      </div>
+      <div class="pure-u-1 pure-u-md-1-1 l-box">
+        <%= f.submit %>
+      </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
-  <div class="field">
-    <%= f.label :author_name %><br>
-    <%= f.text_field :author_name %>
-  </div>
-  <div class="field">
-    <%= f.label :released_date %><br>
-    <%= f.datetime_select :released_date %>
-  </div>
-  <div class="field">
-    <%= f.label :is_released %><br>
-    <%= f.check_box :is_released %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
