--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
         </header>
 
         <div class="post-description">
-          <p><%= post.content %></p>
+          <p><%= post.content.html_safe %></p>
         </div>
 
       </section>
