--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,33 +1,3 @@
-
-<!--<p id="notice"><%= notice %></p>-->
-
-<!--<p>-->
-<!--<strong>Title:</strong>-->
-<!--<%= @post.title %>-->
-<!--</p>-->
-
-<!--<p>-->
-<!--<strong>Content:</strong>-->
-<!--<%= @post.content %>-->
-<!--</p>-->
-
-<!--<p>-->
-<!--<strong>Author name:</strong>-->
-<!--<%= @post.author_name %>-->
-<!--</p>-->
-
-<!--<p>-->
-<!--<strong>Released date:</strong>-->
-<!--<%= @post.released_date %>-->
-<!--</p>-->
-
-<!--<p>-->
-<!--<strong>Is released:</strong>-->
-<!--<%= @post.is_released %>-->
-<!--</p>-->
-
-<!--<%= link_to 'Back', posts_path %>-->
-
 <div class="posts">
 
   <section class="post">
@@ -41,7 +11,7 @@
     </header>
 
     <div class="post-description">
-      <p><%= @post.content %></p>
+      <p><%= @post.content.html_safe %></p>
     </div>
 
   </section>
